--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!-- <script src="https://unpkg.com/react@15/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> -->
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Game Uploader</title>
   </head>
   <body>
+    <style>
+      body {
+        font-family: 'Gruppo';
+      }
+    </style>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
